# third-year-project

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  ]  callgrind.out.10558  callgrind.out.11100  callgrind.out.11224  flake.nix  pruning_results.txt  run_program  run_tests  shell.nix
.direnv/: flake-profile-2-link
docs/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  README_8md.html  annotated.html  apca_8cpp.html  apca_8cpp_8o_8d.html  apca_8h.html  apca_8h_source.html  apla__segment__and__merge_8cpp.html  apla__segment__and__merge_8cpp_8o_8d.html  apla__segment__and__merge_8h.html  apla__segment__and__merge_8h_source.html  bottom__up_8cpp.html  bottom__up_8cpp_8o_8d.html  bottom__up_8h.html  bottom__up_8h_source.html  capla_8cpp.html  capla_8cpp_8o_8d.html  capla_8h.html  capla_8h_source.html  classBernFunctor-members.html  classBernFunctor.html  classCauchyFunctor-members.html  classCauchyFunctor.html  classGeminiNaive-members.html  classGeminiNaive.html  classNonCopyable-members.html  classNonCopyable.html  classNormalFunctor-members.html  classNormalFunctor.html  classRTree-members.html  classRTree.html  classRandomWalk-members.html  classRandomWalk.html  classUnifFunctor-members.html  classUnifFunctor.html  classes.html  classgnuplotio_1_1ArrayTraitsDefaults-members.html  classgnuplotio_1_1ArrayTraitsDefaults.html  classgnuplotio_1_1ArrayTraitsImpl-members.html  (+888 more)
docs/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  annotated.tex  apca_8cpp.tex  apca_8cpp_8o_8d.tex  apca_8h.tex  apca_8h_source.tex  apla__segment__and__merge_8cpp.tex  apla__segment__and__merge_8cpp_8o_8d.tex  apla__segment__and__merge_8h.tex  apla__segment__and__merge_8h_source.tex  bottom__up_8cpp.tex  bottom__up_8cpp_8o_8d.tex  bottom__up_8h.tex  bottom__up_8h_source.tex  capla_8cpp.tex  capla_8cpp_8o_8d.tex  capla_8h.tex  capla_8h_source.tex  classBernFunctor.tex  classCauchyFunctor.tex  classGeminiNaive.tex  classNonCopyable.eps  classNonCopyable.tex  classNormalFunctor.tex  classRTree.tex  classRandomWalk.tex  classUnifFunctor.tex  classgnuplotio_1_1ArrayTraitsDefaults.eps  classgnuplotio_1_1ArrayTraitsDefaults.tex  classgnuplotio_1_1ArrayTraitsImpl.eps  classgnuplotio_1_1ArrayTraitsImpl.tex  classgnuplotio_1_1ArrayTraitsImpl_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tupl9cd2a68075ce3451ee1e03d371c7a602.eps  classgnuplotio_1_1ArrayTraitsImpl_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tupl9cd2a68075ce3451ee1e03d371c7a602.tex  classgnuplotio_1_1ArrayTraitsImpl_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tupldc9a4a46a2c15d8592b02fbaab9f7510.eps  classgnuplotio_1_1ArrayTraitsImpl_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tupldc9a4a46a2c15d8592b02fbaab9f7510.tex  classgnuplotio_1_1ArrayTraitsImpl_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__like__stl__container2_3_01T_01_4_01_4_01_4.eps  classgnuplotio_1_1ArrayTraitsImpl_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__like__stl__container2_3_01T_01_4_01_4_01_4.tex  classgnuplotio_1_1ArrayTraitsImpl_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__like__stl__container_3_01T_01_4_01_4_01_4.eps  classgnuplotio_1_1ArrayTraitsImpl_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__like__stl__container_3_01T_01_4_01_4_01_4.tex  (+622 more)
lib/cleaning/: CMakeLists.txt  z_norm.cpp  z_norm.h
lib/dimension_reductions/: CMakeLists.txt  apca.cpp  apca.h  apla_segment_and_merge.cpp  apla_segment_and_merge.h  bottom_up.cpp  bottom_up.h  conv_double_window.cpp  conv_double_window.h  dac_curve_fitting.cpp  dac_curve_fitting.h  double_window.cpp  double_window.h  exact_dp.cpp  exact_dp.h  naive_pla.cpp  naive_pla.h  paa.cpp  paa.h  pla.cpp  pla.h  sliding_window.cpp  sliding_window.h  swing.cpp  swing.h
lib/parsing/: CMakeLists.txt  tsv_parsing.cpp  tsv_parsing.h  ucr_parsing.cpp  ucr_parsing.h
lib/sequence_gen/: CMakeLists.txt  random_walk.cpp  random_walk.h
lib/similarity_search/: CMakeLists.txt  error_measures.cpp  error_measures.h  gemini.cpp  lower_bounds.cpp  lower_bounds.h  lower_bounds_apca.h  lower_bounds_apla.h  mse.cpp  mse.h  r-tree-insert.cpp  r-tree.cpp  r-tree.h  r_tree.h  sequential_scan.cpp  sequential_scan.h
naive-PLA/: CMakeLists.txt  gemini.cpp  main.cpp  naive_pla.cpp  random_walk.cpp  sequential_scan.cpp  tsv_reader.cpp
src/: demo.cpp  main.cpp
src/evaluations/: capla.cpp  capla.h  double_window.h  e_guarantee_eval.cpp  e_guarantee_eval.h  exact_dp.h  general.cpp  general.h
src/plotting/: plot_dimreduct_paa.cpp  plot_dimreduct_paa.h  plot_dimreduct_pla.cpp  plot_dimreduct_pla.h  plot_types.cpp  plot_types.h  plotting_constants.h  series_plotting.cpp  series_plotting.h
tst/similarity_search/: r-tree-test.cpp
tsv/: testwalk1.tsv
(+149 files in other folders)
